--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -21,10 +21,10 @@ import Title from "../shared/Title.astro";
         </div>
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             <Title>
-                We help drive your business forward faster
+                Ваші надійні юридичні партнери
             </Title>
             <Paragraph className="mt-8">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, saepe aliquid autem alias vero distinctio dignissimos consequatur? Excepturi quibusdam, quam ipsum hic, laudantium ducimus suscipit, culpa facere consequuntur repellat delectus.
+                Ми — адвокатська фірма з багаторічним досвідом у різних галузях права. Наші юристи надають комплексні юридичні послуги, від консультацій до судового захисту, зокрема в таких сферах, як корпоративне право, захист інтересів у суді, сімейне право та нерухомість. Ми працюємо на результат і робимо все можливе, щоб забезпечити максимальний захист ваших прав.
             </Paragraph>
             <div class="pt-8 grid grid-cols-2 items-center gap-4 max-w-3xl md:max-w-[none]">
                 <Info description="Lorem ipsum dolor sit amet consectetur" title="Mission">
