--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -10,13 +10,12 @@ import Title from "../shared/Title.astro";
         
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             <Title>
-                We provide Important Features for Digital Marketing
+                Вирішення Господарських та Цивільних спорів
             </Title>
             <Paragraph className="mt-8">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 <br> 
-                Minus, saepe aliquid autem alias vero distinctio dignissimos consequatur?
-            </Paragraph>
+Відстоюємо права та інтереси клієнта за допомогою ефективного досудового та  судово-го захисту. Маємо досвід ведення майже усіх видів судових спорів. Ми націлені передусім на компроміс, пошук порозуміння з опонентами, розв’язання спору в мирний спосіб. Створюємо передумови відшкодуванню витрат на адвокатів за рахунок опонентів.            </Paragraph>
             <Paragraph className="mt-2">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, saepe aliquid autem alias vero distinctio dignissimos consequatur?
             </Paragraph>
