Update components and add new images

--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -13,9 +13,8 @@ import Title from "../shared/Title.astro";
                 Вирішення Господарських та Цивільних спорів
             </Title>
             <Paragraph className="mt-8">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 <br> 
-Відстоюємо права та інтереси клієнта за допомогою ефективного досудового та  судово-го захисту. Маємо досвід ведення майже усіх видів судових спорів. Ми націлені передусім на компроміс, пошук порозуміння з опонентами, розв’язання спору в мирний спосіб. Створюємо передумови відшкодуванню витрат на адвокатів за рахунок опонентів.            </Paragraph>
+Відстоюємо права та інтереси клієнта за допомогою ефективного досудового та  судово-го захисту. Маємо досвід ведення майже усіх видів судових спорів. Ми націлені передусім на компроміс, пошук порозуміння з опонентами, розв'язання спору в мирний спосіб. Створюємо передумови відшкодуванню витрат на адвокатів за рахунок опонентів.            </Paragraph>
             <Paragraph className="mt-2">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, saepe aliquid autem alias vero distinctio dignissimos consequatur?
             </Paragraph>
@@ -35,15 +34,15 @@ import Title from "../shared/Title.astro";
             </ul>
         </div>
 
-        <div class="max-w-md mx-auto midmd:max-w-none lg:mx-0  lg:pr-10 xl:pr-2 flex-1 flex w-11/12 midmd:w-5/12 lg:w-1/2 midmd:h-auto">
-            <div class="w-full h-80 sm:h-96 midmd:h-full relative">
+        <div class="max-w-md mx-auto midmd:max-w-none lg:mx-0 lg:pr-10 xl:pr-2 flex-1 flex w-11/12 midmd:w-5/12 lg:w-1/2 midmd:h-auto">
+            <div class="w-full aspect-[3/4] relative">
                 <div class="absolute rotate-45 -left-5 md:-left-10 lg:-left-20 xl:-left-24 p-1 top-1/2 w-16 h-16 bg-gradient-to-br from-primary to-orange-400 blur-3xl opacity-50"></div>
                 <div class="absolute  p-1 -top-4 md:-top-10 right-0 w-20 h-20 bg-gradient-to-br from-primary to-orange-400 rounded-full blur-3xl opacity-60"></div>
                 
                 <span class="absolute w-full aspect-[16/5] -skew-x-12 rounded-full bg-gradient-to-tr from-primary to-green-400 opacity-40 blur-2xl left-0 bottom-0"></span>
-                <img src={"/images/dev-with-c.webp"} alt="banner image" 
+                <img src={"/images/P9307467.webp"} alt="banner image" 
                 width="1240" height="1385"
-                class=" w-auto left-1/2 -translate-x-1/2 absolute bottom-0 max-h-full" />
+                class="w-full h-full object-cover absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2" />
             </div>
         </div>
     </Container>
