--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -19,10 +19,10 @@ type ServicesProps = {
     <Container className="space-y-10 md:sapce-y-12">
         <div class="text-center max-w-3xl mx-auto space-y-4">
             <Title>
-                What we offer
+                Наші послуги
             </Title>
             <Paragraph>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Ми надаємо комплексну юридичну допомогу в різних сферах права, допомагаючи клієнтам успішно вирішувати як особисті, так і корпоративні питання.
             </Paragraph>
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
