--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -121,11 +121,11 @@ const footerLegal = [
                             <span class="absolute w-2 h-2 rounded-full bg-heading-1 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></span>
                         </div>
                         <div class="inline-flex text-lg font-semibold text-heading-1">
-                            AgenceX
+                            Кушніренко та Партнери
                         </div>
                     </a>
                     <Paragraph className={"mt-8"}>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, maiores nam doloribus id magni
+                        Адвокаться Консультація у м.Кїів
                     </Paragraph>
                 </div>
 
@@ -172,17 +172,6 @@ const footerLegal = [
             </GroupFooterNav>
 
         </div>
-    </Container>
-    <div class=" bg-gradient-to-tl from-box-bg py-2 relative">
-        <Container>
-            <div class="flex justify-between items-center gap-6 md:text-lg text-heading-3">
-                <div>
-                    &copy; <span id="year"></span> AgenceX. All right reserved
-                </div>
-                <div>
-                    Proudly made by <a href="https://github.com/johnkat-mj" target="_blank" class="font-semibold">John Kat</a>
-                </div>
-            </div>
-        </Container>
+    
     </div>
 </footer>
