--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -6,19 +6,19 @@ import  Navitem from "../shared/Navitem.astro";
 const navItems = [
     {
         href:"#",
-        text:"Home"
+        text:"Головна"
     },
     {
         href:"#services",
-        text:"Services"
+        text:"Послуги"
     },
     {
         href:"#about-us",
-        text:"About us"
+        text:"Про нас"
     },
     {
         href:"#features",
-        text:"Features"
+        text:"Місія"
     },
 ]
 ---
@@ -36,7 +36,7 @@ const navItems = [
                         <span class="absolute w-2 h-2 rounded-full bg-heading-1 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></span>
                     </div>
                     <div class="inline-flex text-lg font-semibold text-heading-1">
-                        AgenceX
+                        Кушніренко та Партнери
                     </div>
                 </a>
             </div>
@@ -51,7 +51,7 @@ const navItems = [
                 </ul>
 
                 <div class="lg:min-w-max flex items-center sm:w-max w-full pb-6 lg:pb-0 border-b border-box-bg lg:border-0 px-6 lg:px-0">
-                    <BtnLink text="Get Started" href="#cta" className="flex justify-center w-full sm:w-max" variant="primary"/>
+                    <BtnLink text="Консультація" href="#cta" className="flex justify-center w-full sm:w-max" variant="primary"/>
                 </div>
             </div>
 
