--- a/src/components/sections/ByNumber.astro
+++ b/src/components/sections/ByNumber.astro
@@ -11,36 +11,38 @@ import Container from "../shared/Container.astro";
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          12+
+          30+
         </h2>
-        <p class="mt-2 text-heading-3">Created projects</p>
+        <p class="mt-2 text-heading-3">Років досвіду</p>
       </div>
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          200+
+          95%
         </h2>
-        <p class="mt-2 text-heading-3">Projects</p>
+        <p class="mt-2 text-heading-3">Виграних справ у судах різних інстанцій
+</p>
       </div>
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          120
+          90%
         </h2>
-        <p class="mt-2 text-heading-3">Happy Client</p>
+        <p class="mt-2 text-heading-3">Клієнтів повертаються для подальшої співпраці
+</p>
       </div>
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          5+
+          100%
         </h2>
-        <p class="mt-2 text-heading-3">Years</p>
+        <p class="mt-2 text-heading-3">Конфіденційність гарантована</p>
       </div>
     </div>
   </Container>
