--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -41,15 +41,15 @@ import Paragraph from "../shared/Paragraph.astro";
           class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight
           font-bold text-heading-1"
         >
-          Quick Start your <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">Strategic Digital</span> Marketing Campaing
+          Захист ваших прав у <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">Кримінальних</span> та Цивильних справах
         </h1>
         <Paragraph className={"pt-10"}>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-          delectus architecto ullam earum
+          Ми допоможемо розв’язати вашу правову ситуацію: від судових спорів до юридичного супроводу. Надійно. Професійно. Конфіденційно.
+
         </Paragraph>
         <div class="mx-auto max-w-md sm:max-w-xl pt-10">
           <Button variant={"primary"}>
-            <span class="text-white relative z-[5]">Get In Touch</span>
+            <span class="text-white relative z-[5]">Консультація</span>
           </Button>
         </div>
       </div>
