--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -14,9 +14,12 @@ import Title from "../shared/Title.astro";
                 <div class="absolute  p-1 -top-4 md:-top-10 right-0 w-20 h-20 bg-gradient-to-br from-primary to-orange-400 rounded-full blur-3xl opacity-60"></div>
                 
                 <span class="absolute w-full aspect-[16/5] -skew-x-12 rounded-full bg-gradient-to-tr from-primary to-green-400 opacity-40 blur-2xl left-0 bottom-0"></span>
-                <img src={"/images/P9308000.webp"} alt="banner image" 
-                width="1240" height="1385"
-                class="w-full h-full object-cover absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2" />
+                <img src={"/images/P9308000.webp"} 
+                    alt="banner image" 
+                    width="800" 
+                    height="900"
+                    loading="lazy"
+                    class="w-full h-full object-cover absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2" />
             </div>
         </div>
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
