--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -50,14 +50,21 @@ import ByNumber from "./ByNumber.astro";
         </div>
 
         <div class="flex flex-1 lg:w-1/2 lg:h-auto relative lg:max-w-none lg:mx-0 mx-auto max-w-3xl">
-            <img 
-                src="/images/image1.webp" 
-                alt="Hero image" 
-                width="1200" 
-                height="1200" 
-                loading="lazy"
-                class="lg:absolute lg:w-full lg:h-full rounded-3xl object-cover lg:max-h-none max-h-96"
-            >
+            <picture>
+                <source
+                    type="image/webp"
+                    srcset="/images/image1.webp"
+                >
+                <img 
+                    src="/images/image1.webp" 
+                    alt="Hero image" 
+                    width="800" 
+                    height="800" 
+                    loading="eager"
+                    fetchpriority="high"
+                    class="lg:absolute lg:w-full lg:h-full rounded-3xl object-cover lg:max-h-none max-h-96"
+                >
+            </picture>
         </div>
     </Container>
 
