--- a/src/components/shared/FooterNav.astro
+++ b/src/components/shared/FooterNav.astro
@@ -10,8 +10,8 @@ export interface Props{
 const {title, navItems} = Astro.props
 ---
 
-<nav class="space-y-6">
-    <h2 class="capitalze font-semibold text-heading-1 text-xl">
+<nav class="space-y-6 text-center">
+    <h2 class="capitalize font-semibold text-heading-1 text-xl">
         {title}
     </h2>
     <ul class="space-y-3 font-medium md:text-lg text-heading-3">
@@ -22,7 +22,6 @@ const {title, navItems} = Astro.props
                 </a>
             </li>
         ))
-
         }
     </ul>
 </nav>
