--- a/src/components/blocks/GroupFooterNav.astro
+++ b/src/components/blocks/GroupFooterNav.astro
@@ -1,3 +1,3 @@
-<div class="grid md:grid-cols-2 gap-8 h-max">
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-8 h-max w-full">
     <slot/>
 </div>
