--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -38,14 +38,14 @@ import Title from "../shared/Title.astro";
                 Ми — адвокатська фірма з багаторічним досвідом у різних галузях права. Наші юристи надають комплексні юридичні послуги, від консультацій до судового захисту, зокрема в таких сферах, як корпоративне право, захист інтересів у суді, сімейне право та нерухомість. Ми працюємо на результат і робимо все можливе, щоб забезпечити максимальний захист ваших прав.
             </Paragraph>
             <div class="pt-8 grid grid-cols-2 items-center gap-4 max-w-3xl md:max-w-[none]">
-                <Info description="Lorem ipsum dolor sit amet consectetur" title="Mission">
+                <Info description="Надавати клієнтам професійний, доступний і ефективний юридичний захист, допомагаючи їм відстояти свої права у найскладніших правових ситуаціях." title="Місія">
                     <span slot="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
                         </svg>                              
                     </span>
                 </Info>
-                <Info description="Lorem ipsum dolor sit amet consectetur" title="Vision">
+                <Info description="Стати надійним юридичним партнером для кожного клієнта, розвиваючи культуру правової обізнаності та справедливості у суспільстві." title="Бачення">
                     <span slot="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
