--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -16,20 +16,20 @@ import Title from "../shared/Title.astro";
                 <br> 
 Відстоюємо права та інтереси клієнта за допомогою ефективного досудового та  судово-го захисту. Маємо досвід ведення майже усіх видів судових спорів. Ми націлені передусім на компроміс, пошук порозуміння з опонентами, розв'язання спору в мирний спосіб. Створюємо передумови відшкодуванню витрат на адвокатів за рахунок опонентів.            </Paragraph>
             <Paragraph className="mt-2">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, saepe aliquid autem alias vero distinctio dignissimos consequatur?
+                Наша юридична підтримка включає:
             </Paragraph>
             <ul class="mt-8 space-y-4 text-heading-3 font-medium">
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Web site Analysis
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>  Аналіз правової ситуації та доказів
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Free optimazation.
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Підготовку позовних заяв і відзивів
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Представництво в суді першої та апеляційної інстанцій
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Content Optimization.
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span>  Переговори з іншою стороною для досудового врегулювання
                 </li>
             </ul>
         </div>
