--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import CTA from '../components/sections/CTA.astro';
 
 ---
 
-<Layout title="Кушніренко та Партнери">
+<Layout title="Lex Duo">
 	<main class="flex flex-col gap-y-20 md:gap-y-32 overflow-hidden">
 		<Hero/>
 		<Services/>
